<resources>
    <string name="displayName" translatable="false">STUDIA</string>

    <!-- MainActivity -->
    <string name="appName" translatable="false">studia</string>
    <string name="author" translatable="false">App Developers</string>

    <!-- LoginActivity -->
    <string name="email">이메일 주소</string>
    <string name="password">비밀번호</string>
    <string name="emailhint" translatable="false">email@example.com</string>
    <string name="pwhint" translatable="false">• • • • • • • •</string>
    <string name="signup">계정 만들기</string>
    <string name="iforgot">비밀번호 찾기</string>
    <string name="signin">로그인</string>
    <string name="googlesignin">Google 계정으로 로그인</string>
    <string name="appMotto">나만의\n독창적인\n공부 스타일 찾기</string>
    <string name="yakgawndonge">스튜디아 이용약관과 개인정보처리방침에 동의합니다.</string>

    <!-- CalendarActivity -->
    <string name="memo">메모</string>
    <string name="reminder">과제 및 준비물</string>

    <!-- ScheduleActivity -->
    <string name="addNote">노트 추가</string>
    <string name="writeContent">내용을 입력하세요</string>
    <string name="done">완료</string>

    <!-- AppInfoActivity -->
    <string name="policy">이용약관</string>
    <string name="private_policy">개인정보처리방침</string>
    <string name="opensource_license">오픈소스 라이선스</string>
    <string name="deleteAccount">계정 삭제</string>
    <string name="google_play_policy">App Developers는 Google Play 개발자 정책을 준수합니다.</string>

    <!-- PolicyActivity -->
    <string name="policyAndprivatepolicy">약관 및 개인정보처리방침</string>

    <!-- PopupActivity -->
    <string name="logout">로그아웃</string>
    <string name="changePassword">비밀번호 변경</string>
    <string name="applicationInfo">애플리케이션 정보</string>

    <!-- DeleteAccount -->
    <string name="goodbye">꽃이 피면\n스튜디아와\n다시 만나요!</string>
    <string name="hawkin">계정 삭제는 돌이킬 수 없다는 것을 알고있습니다.</string>
    <string name="deleteAnnouncement">현재 계정 삭제 기능은 소셜 로그인 사용자에게 지원되지 않습니다.</string>

    <!-- list-view.xml -->
    <string name="Home">가정</string>
    <string name="Science">과학</string>
    <string name="Korean">국어</string>
    <string name="Artcraft">기술</string>
    <string name="Civics">도덕</string>
    <string name="Reading">독서</string>
    <string name="Art">미술</string>
    <string name="HealthEdu">보건</string>
    <string name="SocialStudies">사회</string>
    <string name="Math">수학</string>
    <string name="English">영어</string>
    <string name="Music">음악</string>
    <string name="ComputerScience">정보</string>
    <string name="Career">진로</string>
    <string name="CreativeActivity">창체</string>
    <string name="PhysicalEducation">체육</string>
    <string name="Environments">환경</string>
    <string name="Autonomy">자율</string>
    <string name="Etc">기타</string>

    <!-- subject_spinner.xml -->
    <string name="spinnerHome">가정</string>
    <string name="spinnerScience">과학</string>
    <string name="spinnerKorean">국어</string>
    <string name="spinnerArtcraft">기술</string>
    <string name="spinnerCivics">도덕</string>
    <string name="spinnerReading">독서</string>
    <string name="spinnerArt">미술</string>
    <string name="spinnerHealthEdu">보건</string>
    <string name="spinnerSocialStudies">사회</string>
    <string name="spinnerMath">수학</string>
    <string name="spinnerEnglish">영어</string>
    <string name="spinnerMusic">음악</string>
    <string name="spinnerComputerScience">정보</string>
    <string name="spinnerCareer">진로</string>
    <string name="spinnerCreativeActivity">창체</string>
    <string name="spinnerPhysicalEducation">체육</string>
    <string name="spinnerEnvironments">환경</string>
    <string name="spinnerAutonomy">자율</string>
    <string name="spinnerEtc">기타</string>

    <!-- activity_notemanager.xml -->
    <string name="editNote">노트 수정</string>
</resources>