<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/TopBar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="#2291FF">

        <ImageButton
            android:id="@+id/btBack"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:backgroundTint="@color/studia_brandcolor"
            android:src="@drawable/ic_baseline_arrow_back_40"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvTopbarAppInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#2291FF"
            android:fontFamily="@font/courgetteregular"
            android:stateListAnimator="@null"
            android:text="studia"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:transitionName="date" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginEnd="55dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvIntroduce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/nanumgothic"
        android:lines="3"
        android:text="@string/goodbye"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvSayEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:fontFamily="@font/nanumsquarer"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/logintextbox"
        android:ems="10"
        android:fontFamily="@font/nanumgothic"
        android:hint="@string/emailhint"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvSayPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:fontFamily="@font/nanumsquarer"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/logintextbox"
        android:ems="10"
        android:fontFamily="@font/nanumgothic"
        android:hint="@string/pwhint"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <CheckBox
        android:id="@+id/cbPolicy"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="5dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/hawkin"
        android:textSize="13sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/dialogbutton"
        android:text="@string/deleteAccount"
        android:textColor="#eb1a1a"
        android:textStyle="bold"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tvAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/nanumgothic"
        android:text="@string/deleteAnnouncement"
        android:textAlignment="center"
        android:textColor="#eb1a1a"
        android:textStyle="bold" />

</LinearLayout>