<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:background="#FFFFFF"
    android:theme="@android:style/Theme.Dialog"
    tools:context=".PopupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/TopBar"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="#2291FF"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btBack"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:backgroundTint="@color/studia_brandcolor"
                android:src="@drawable/ic_baseline_arrow_back_40"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#2291FF"
                android:fontFamily="sans-serif-light"
                android:stateListAnimator="@null"
                android:text="@string/editNote"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:transitionName="date"
                tools:ignore="TouchTargetSizeCheck" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="55dp"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/nanumsquareb"
                android:text="@string/addNote"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/calendarsection"
                android:orientation="vertical"
                android:padding="10dp">

                <Spinner
                    android:id="@+id/snSubject"
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:layout_gravity="left"
                    android:entries="@array/subject"
                    tools:ignore="SpeakableTextPresentCheck" />

                <EditText
                    android:id="@+id/etAssign"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:fontFamily="@font/nanumgothic"
                    android:gravity="top"
                    android:hint="내용을 입력하세요"
                    android:inputType="textMultiLine"
                    android:minLines="6"
                    android:padding="10dp"
                    android:scrollHorizontally="false"
                    android:textColor="@color/black"
                    tools:ignore="SpeakableTextPresentCheck" />

            </LinearLayout>

            <Button
                android:id="@+id/btComplete"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/loginbtn"
                android:fontFamily="@font/nanumgothic"
                android:text="@string/done"
                android:textColor="@color/white"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <RelativeLayout
                android:layout_width="331dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="100dp">

                <LinearLayout
                    android:id="@+id/copyLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgCopy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="6dp"
                        app:srcCompat="@drawable/calendar_image_share" />

                    <TextView
                        android:id="@+id/tvCopy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:text="복사" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/shareLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginLeft="32dp"
                    android:layout_toRightOf="@+id/copyLayout"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgShare"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="6dp"
                        app:srcCompat="@drawable/calendar_image_share" />

                    <TextView
                        android:id="@+id/tvShare"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:text="공유" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/deleteLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginLeft="32dp"
                    android:layout_toRightOf="@+id/shareLayout"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgDelete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="6dp"
                        app:srcCompat="@drawable/calendar_image_delete" />

                    <TextView
                        android:id="@+id/tvDelete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:text="삭제" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>